Fixed posts pages not using full filename, fixed header on mobile

--- a/site/include/main.css
+++ b/site/include/main.css
@@ -13,7 +13,6 @@ div.main {
 /* ========================= */
 
 div.toolbar {
-    height: 50px;
     background-color: #646464;
     border: 1px solid #9b9b9b;
     border-radius: 10px;
